2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Makefile.am, libstetic/Makefile.am, stetic/Makefile.am:
	  Distcheck fixes.
	* libstetic/GeneratorContext.cs: Don't generate gettext for empty
	  strings.
	* configure.in: Add missing package.
	* stetic/stetic.mdp, libsteticui/libsteticui.mdp,
	  libstetic/libstetic.mdp, stetic.mds: Added MonoDevelop projects.

2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Clone the widget library list from
	  the master project since the list is cleared when the copy project
	  is closed.
	* libstetic/ObjectWrapper.cs, libstetic/wrapper/Button.cs,
	  libstetic/PropertyDescriptor.cs, libstetic/WidgetUtils.cs: Properly
	  generate translatable properties.

2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/SelectImageDialog.cs,
	  libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/SelectIconDialog.cs, libstetic/WidgetUtils.cs,
	  libstetic/TypedClassDescriptor.cs,
	  libstetic/wrapper/pixmaps/missing.png: Looks like some themes don't
	  have icon for gtk-missing-image. Added a fallback to avoid crashes.
	* stetic/UIManager.cs: Action fixes.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in: More dependency removal.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* autogen.sh: Removed gnome-common dependency.

2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Clipboard.cs: Use the new PasteChild method, since
	  ReplaceChild is now protected.
	* libsteticui/Glade.cs: Don't try to resolve references when loading a
	  glade file.
	* libsteticui/libsteticui.dll.config, libstetic/libstetic.dll.config:
	  Added dlls maps for MacOSX
	* libstetic/wrapper/Button.cs, libstetic/wrapper/CheckButton.cs: Set
	  UseUnderline = true by default.
	* libstetic/wrapper/Container.cs: Made ReplaceChild protected. Make
	  sure widgets copied from clipboard are properly registered in the
	  undo system.