@@ -82,14 +82,14 @@
     <File name="./missing.png" subtype="Code" buildaction="EmbedAsResource" />
   </Contents>
   <References>
+    <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="System.Runtime.Remoting, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
+    <ProjectReference type="Gac" localcopy="True" refto="gnome-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gconf-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Project" localcopy="True" refto="libstetic" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
-    <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
     <ProjectReference type="Assembly" localcopy="True" refto="./lib/Mono.Cecil.dll" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" ExecuteTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../" OutputDirVar="" AssemblyNameVar="">
